models/postgrest/postgrest.peg.go
package postgrest

// Code generated by peg postgrest.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleQueryString
	ruleQueryParam
	ruleLogicalQuery
	ruleFilterList
	ruleFilterExpression
	ruleLogicalFilter
	ruleLogicalOperator
	ruleBinaryOperator
	ruleSelect
	ruleSelectOptions
	ruleSelectOption
	ruleSelectColumn
	ruleAggregation
	ruleAggregationOption
	ruleSelectCount
	ruleRenamed
	ruleCast
	ruleLimit
	ruleOffset
	ruleOrder
	ruleFilter
	ruleOrderOptions
	ruleOrderOption
	ruleColumnName
	ruleOrderDirection
	ruleNullDirection
	rulePredicate
	ruleNot
	ruleOperator
	ruleAnyAll
	ruleOperand
	ruleListOperand
	ruleListOperandItem
	ruleVectorOperand
	ruleVectorOperandItem
	ruleQuotedString
	ruleEscapedChar
	ruleScalarOperand
	ruleInteger
	ruleEND
)

var rul3s = [...]string{
	"Unknown",
	"QueryString",
	"QueryParam",
	"LogicalQuery",
	"FilterList",
	"FilterExpression",
	"LogicalFilter",
	"LogicalOperator",
	"BinaryOperator",
	"Select",
	"SelectOptions",
	"SelectOption",
	"SelectColumn",
	"Aggregation",
	"AggregationOption",
	"SelectCount",
	"Renamed",
	"Cast",
	"Limit",
	"Offset",
	"Order",
	"Filter",
	"OrderOptions",
	"OrderOption",
	"ColumnName",
	"OrderDirection",
	"NullDirection",
	"Predicate",
	"Not",
	"Operator",
	"AnyAll",
	"Operand",
	"ListOperand",
	"ListOperandItem",
	"VectorOperand",
	"VectorOperandItem",
	"QuotedString",
	"EscapedChar",
	"ScalarOperand",
	"Integer",
	"END",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type PostgrestParser struct {
	Buffer string
	buffer []rune
	rules  [41]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *PostgrestParser) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *PostgrestParser) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *PostgrestParser
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *PostgrestParser) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *PostgrestParser) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *PostgrestParser) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*PostgrestParser) error {
	return func(p *PostgrestParser) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*PostgrestParser) error {
	return func(p *PostgrestParser) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *PostgrestParser) Init(options ...func(*PostgrestParser) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 QueryString <- <(QueryParam? ('&' QueryParam)* END)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				{
					position2, tokenIndex2 := position, tokenIndex
					if !_rules[ruleQueryParam]() {
						goto l2
					}
					goto l3
				l2:
					position, tokenIndex = position2, tokenIndex2
				}
			l3:
			l4:
				{
					position5, tokenIndex5 := position, tokenIndex
					if buffer[position] != rune('&') {
						goto l5
					}
					position++
					if !_rules[ruleQueryParam]() {
						goto l5
					}
					goto l4
				l5:
					position, tokenIndex = position5, tokenIndex5
				}
				if !_rules[ruleEND]() {
					goto l0
				}
				add(ruleQueryString, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 QueryParam <- <(Limit / Offset / Order / Select / LogicalQuery / Filter)> */
		func() bool {
			position6, tokenIndex6 := position, tokenIndex
			{
				position7 := position
				{
					position8, tokenIndex8 := position, tokenIndex
					if !_rules[ruleLimit]() {
						goto l9
					}
					goto l8
				l9:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleOffset]() {
						goto l10
					}
					goto l8
				l10:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleOrder]() {
						goto l11
					}
					goto l8
				l11:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleSelect]() {
						goto l12
					}
					goto l8
				l12:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleLogicalQuery]() {
						goto l13
					}
					goto l8
				l13:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleFilter]() {
						goto l6
					}
				}
			l8:
				add(ruleQueryParam, position7)
			}
			return true
		l6:
			position, tokenIndex = position6, tokenIndex6
			return false
		},
		/* 2 LogicalQuery <- <(LogicalOperator '=' FilterList)> */
		func() bool {
			position14, tokenIndex14 := position, tokenIndex
			{
				position15 := position
				if !_rules[ruleLogicalOperator]() {
					goto l14
				}
				if buffer[position] != rune('=') {
					goto l14
				}
				position++
				if !_rules[ruleFilterList]() {
					goto l14
				}
				add(ruleLogicalQuery, position15)
			}
			return true
		l14:
			position, tokenIndex = position14, tokenIndex14
			return false
		},
		/* 3 FilterList <- <('(' FilterExpression (',' FilterExpression)* ')')> */
		func() bool {
			position16, tokenIndex16 := position, tokenIndex
			{
				position17 := position
				if buffer[position] != rune('(') {
					goto l16
				}
				position++
				if !_rules[ruleFilterExpression]() {
					goto l16
				}
			l18:
				{
					position19, tokenIndex19 := position, tokenIndex
					if buffer[position] != rune(',') {
						goto l19
					}
					position++
					if !_rules[ruleFilterExpression]() {
						goto l19
					}
					goto l18
				l19:
					position, tokenIndex = position19, tokenIndex19
				}
				if buffer[position] != rune(')') {
					goto l16
				}
				position++
				add(ruleFilterList, position17)
			}
			return true
		l16:
			position, tokenIndex = position16, tokenIndex16
			return false
		},
		/* 4 FilterExpression <- <(LogicalFilter / (ColumnName '.' Predicate))> */
		func() bool {
			position20, tokenIndex20 := position, tokenIndex
			{
				position21 := position
				{
					position22, tokenIndex22 := position, tokenIndex
					if !_rules[ruleLogicalFilter]() {
						goto l23
					}
					goto l22
				l23:
					position, tokenIndex = position22, tokenIndex22
					if !_rules[ruleColumnName]() {
						goto l20
					}
					if buffer[position] != rune('.') {
						goto l20
					}
					position++
					if !_rules[rulePredicate]() {
						goto l20
					}
				}
			l22:
				add(ruleFilterExpression, position21)
			}
			return true
		l20:
			position, tokenIndex = position20, tokenIndex20
			return false
		},
		/* 5 LogicalFilter <- <(LogicalOperator FilterList)> */
		func() bool {
			position24, tokenIndex24 := position, tokenIndex
			{
				position25 := position
				if !_rules[ruleLogicalOperator]() {
					goto l24
				}
				if !_rules[ruleFilterList]() {
					goto l24
				}
				add(ruleLogicalFilter, position25)
			}
			return true
		l24:
			position, tokenIndex = position24, tokenIndex24
			return false
		},
		/* 6 LogicalOperator <- <(Not? BinaryOperator)> */
		func() bool {
			position26, tokenIndex26 := position, tokenIndex
			{
				position27 := position
				{
					position28, tokenIndex28 := position, tokenIndex
					if !_rules[ruleNot]() {
						goto l28
					}
					goto l29
				l28:
					position, tokenIndex = position28, tokenIndex28
				}
			l29:
				if !_rules[ruleBinaryOperator]() {
					goto l26
				}
				add(ruleLogicalOperator, position27)
			}
			return true
		l26:
			position, tokenIndex = position26, tokenIndex26
			return false
		},
		/* 7 BinaryOperator <- <(('a' 'n' 'd') / ('o' 'r'))> */
		func() bool {
			position30, tokenIndex30 := position, tokenIndex
			{
				position31 := position
				{
					position32, tokenIndex32 := position, tokenIndex
					if buffer[position] != rune('a') {
						goto l33
					}
					position++
					if buffer[position] != rune('n') {
						goto l33
					}
					position++
					if buffer[position] != rune('d') {
						goto l33
					}
					position++
					goto l32
				l33:
					position, tokenIndex = position32, tokenIndex32
					if buffer[position] != rune('o') {
						goto l30
					}
					position++
					if buffer[position] != rune('r') {
						goto l30
					}
					position++
				}
			l32:
				add(ruleBinaryOperator, position31)
			}
			return true
		l30:
			position, tokenIndex = position30, tokenIndex30
			return false
		},
		/* 8 Select <- <('s' 'e' 'l' 'e' 'c' 't' '=' SelectOptions)> */
		func() bool {
			position34, tokenIndex34 := position, tokenIndex
			{
				position35 := position
				if buffer[position] != rune('s') {
					goto l34
				}
				position++
				if buffer[position] != rune('e') {
					goto l34
				}
				position++
				if buffer[position] != rune('l') {
					goto l34
				}
				position++
				if buffer[position] != rune('e') {
					goto l34
				}
				position++
				if buffer[position] != rune('c') {
					goto l34
				}
				position++
				if buffer[position] != rune('t') {
					goto l34
				}
				position++
				if buffer[position] != rune('=') {
					goto l34
				}
				position++
				if !_rules[ruleSelectOptions]() {
					goto l34
				}
				add(ruleSelect, position35)
			}
			return true
		l34:
			position, tokenIndex = position34, tokenIndex34
			return false
		},
		/* 9 SelectOptions <- <(SelectOption (',' SelectOption)*)> */
		func() bool {
			position36, tokenIndex36 := position, tokenIndex
			{
				position37 := position
				if !_rules[ruleSelectOption]() {
					goto l36
				}
			l38:
				{
					position39, tokenIndex39 := position, tokenIndex
					if buffer[position] != rune(',') {
						goto l39
					}
					position++
					if !_rules[ruleSelectOption]() {
						goto l39
					}
					goto l38
				l39:
					position, tokenIndex = position39, tokenIndex39
				}
				add(ruleSelectOptions, position37)
			}
			return true
		l36:
			position, tokenIndex = position36, tokenIndex36
			return false
		},
		/* 10 SelectOption <- <((Renamed ':' (SelectCount / SelectColumn) (':' ':') Cast) / (Renamed ':' (SelectCount / SelectColumn)) / ((SelectCount / SelectColumn) (':' ':') Cast) / (SelectCount / SelectColumn))> */
		func() bool {
			position40, tokenIndex40 := position, tokenIndex
			{
				position41 := position
				{
					position42, tokenIndex42 := position, tokenIndex
					if !_rules[ruleRenamed]() {
						goto l43
					}
					if buffer[position] != rune(':') {
						goto l43
					}
					position++
					{
						position44, tokenIndex44 := position, tokenIndex
						if !_rules[ruleSelectCount]() {
							goto l45
						}
						goto l44
					l45:
						position, tokenIndex = position44, tokenIndex44
						if !_rules[ruleSelectColumn]() {
							goto l43
						}
					}
				l44:
					if buffer[position] != rune(':') {
						goto l43
					}
					position++
					if buffer[position] != rune(':') {
						goto l43
					}
					position++
					if !_rules[ruleCast]() {
						goto l43
					}
					goto l42
				l43:
					position, tokenIndex = position42, tokenIndex42
					if !_rules[ruleRenamed]() {
						goto l46
					}
					if buffer[position] != rune(':') {
						goto l46
					}
					position++
					{
						position47, tokenIndex47 := position, tokenIndex
						if !_rules[ruleSelectCount]() {
							goto l48
						}
						goto l47
					l48:
						position, tokenIndex = position47, tokenIndex47
						if !_rules[ruleSelectColumn]() {
							goto l46
						}
					}
				l47:
					goto l42
				l46:
					position, tokenIndex = position42, tokenIndex42
					{
						position50, tokenIndex50 := position, tokenIndex
						if !_rules[ruleSelectCount]() {
							goto l51
						}
						goto l50
					l51:
						position, tokenIndex = position50, tokenIndex50
						if !_rules[ruleSelectColumn]() {
							goto l49
						}
					}
				l50:
					if buffer[position] != rune(':') {
						goto l49
					}
					position++
					if buffer[position] != rune(':') {
						goto l49
					}
					position++
					if !_rules[ruleCast]() {
						goto l49
					}
					goto l42
				l49:
					position, tokenIndex = position42, tokenIndex42
					{
						position52, tokenIndex52 := position, tokenIndex
						if !_rules[ruleSelectCount]() {
							goto l53
						}
						goto l52
					l53:
						position, tokenIndex = position52, tokenIndex52
						if !_rules[ruleSelectColumn]() {
							goto l40
						}
					}
				l52:
				}
			l42:
				add(ruleSelectOption, position41)
			}
			return true
		l40:
			position, tokenIndex = position40, tokenIndex40
			return false
		},
		/* 11 SelectColumn <- <((ColumnName (':' ':' Cast)? '.' Aggregation '(' AggregationOption? ')') / ColumnName)> */
		func() bool {
			position54, tokenIndex54 := position, tokenIndex
			{
				position55 := position
				{
					position56, tokenIndex56 := position, tokenIndex
					if !_rules[ruleColumnName]() {
						goto l57
					}
					{
						position58, tokenIndex58 := position, tokenIndex
						if buffer[position] != rune(':') {
							goto l58
						}
						position++
						if buffer[position] != rune(':') {
							goto l58
						}
						position++
						if !_rules[ruleCast]() {
							goto l58
						}
						goto l59
					l58:
						position, tokenIndex = position58, tokenIndex58
					}
				l59:
					if buffer[position] != rune('.') {
						goto l57
					}
					position++
					if !_rules[ruleAggregation]() {
						goto l57
					}
					if buffer[position] != rune('(') {
						goto l57
					}
					position++
					{
						position60, tokenIndex60 := position, tokenIndex
						if !_rules[ruleAggregationOption]() {
							goto l60
						}
						goto l61
					l60:
						position, tokenIndex = position60, tokenIndex60
					}
				l61:
					if buffer[position] != rune(')') {
						goto l57
					}
					position++
					goto l56
				l57:
					position, tokenIndex = position56, tokenIndex56
					if !_rules[ruleColumnName]() {
						goto l54
					}
				}
			l56:
				add(ruleSelectColumn, position55)
			}
			return true
		l54:
			position, tokenIndex = position54, tokenIndex54
			return false
		},
		/* 12 Aggregation <- <(!('=' / '&' / ',' / '.' / ':' / '(' / ')') .)+> */
		func() bool {
			position62, tokenIndex62 := position, tokenIndex
			{
				position63 := position
				{
					position66, tokenIndex66 := position, tokenIndex
					{
						position67, tokenIndex67 := position, tokenIndex
						if buffer[position] != rune('=') {
							goto l68
						}
						position++
						goto l67
					l68:
						position, tokenIndex = position67, tokenIndex67
						if buffer[position] != rune('&') {
							goto l69
						}
						position++
						goto l67
					l69:
						position, tokenIndex = position67, tokenIndex67
						if buffer[position] != rune(',') {
							goto l70
						}
						position++
						goto l67
					l70:
						position, tokenIndex = position67, tokenIndex67
						if buffer[position] != rune('.') {
							goto l71
						}
						position++
						goto l67
					l71:
						position, tokenIndex = position67, tokenIndex67
						if buffer[position] != rune(':') {
							goto l72
						}
						position++
						goto l67
					l72:
						position, tokenIndex = position67, tokenIndex67
						if buffer[position] != rune('(') {
							goto l73
						}
						position++
						goto l67
					l73:
						position, tokenIndex = position67, tokenIndex67
						if buffer[position] != rune(')') {
							goto l66
						}
						position++
					}
				l67:
					goto l62
				l66:
					position, tokenIndex = position66, tokenIndex66
				}
				if !matchDot() {
					goto l62
				}
			l64:
				{
					position65, tokenIndex65 := position, tokenIndex
					{
						position74, tokenIndex74 := position, tokenIndex
						{
							position75, tokenIndex75 := position, tokenIndex
							if buffer[position] != rune('=') {
								goto l76
							}
							position++
							goto l75
						l76:
							position, tokenIndex = position75, tokenIndex75
							if buffer[position] != rune('&') {
								goto l77
							}
							position++
							goto l75
						l77:
							position, tokenIndex = position75, tokenIndex75
							if buffer[position] != rune(',') {
								goto l78
							}
							position++
							goto l75
						l78:
							position, tokenIndex = position75, tokenIndex75
							if buffer[position] != rune('.') {
								goto l79
							}
							position++
							goto l75
						l79:
							position, tokenIndex = position75, tokenIndex75
							if buffer[position] != rune(':') {
								goto l80
							}
							position++
							goto l75
						l80:
							position, tokenIndex = position75, tokenIndex75
							if buffer[position] != rune('(') {
								goto l81
							}
							position++
							goto l75
						l81:
							position, tokenIndex = position75, tokenIndex75
							if buffer[position] != rune(')') {
								goto l74
							}
							position++
						}
					l75:
						goto l65
					l74:
						position, tokenIndex = position74, tokenIndex74
					}
					if !matchDot() {
						goto l65
					}
					goto l64
				l65:
					position, tokenIndex = position65, tokenIndex65
				}
				add(ruleAggregation, position63)
			}
			return true
		l62:
			position, tokenIndex = position62, tokenIndex62
			return false
		},
		/* 13 AggregationOption <- <(!('=' / '&' / ',' / '.' / ':' / '(' / ')') .)+> */
		func() bool {
			position82, tokenIndex82 := position, tokenIndex
			{
				position83 := position
				{
					position86, tokenIndex86 := position, tokenIndex
					{
						position87, tokenIndex87 := position, tokenIndex
						if buffer[position] != rune('=') {
							goto l88
						}
						position++
						goto l87
					l88:
						position, tokenIndex = position87, tokenIndex87
						if buffer[position] != rune('&') {
							goto l89
						}
						position++
						goto l87
					l89:
						position, tokenIndex = position87, tokenIndex87
						if buffer[position] != rune(',') {
							goto l90
						}
						position++
						goto l87
					l90:
						position, tokenIndex = position87, tokenIndex87
						if buffer[position] != rune('.') {
							goto l91
						}
						position++
						goto l87
					l91:
						position, tokenIndex = position87, tokenIndex87
						if buffer[position] != rune(':') {
							goto l92
						}
						position++
						goto l87
					l92:
						position, tokenIndex = position87, tokenIndex87
						if buffer[position] != rune('(') {
							goto l93
						}
						position++
						goto l87
					l93:
						position, tokenIndex = position87, tokenIndex87
						if buffer[position] != rune(')') {
							goto l86
						}
						position++
					}
				l87:
					goto l82
				l86:
					position, tokenIndex = position86, tokenIndex86
				}
				if !matchDot() {
					goto l82
				}
			l84:
				{
					position85, tokenIndex85 := position, tokenIndex
					{
						position94, tokenIndex94 := position, tokenIndex
						{
							position95, tokenIndex95 := position, tokenIndex
							if buffer[position] != rune('=') {
								goto l96
							}
							position++
							goto l95
						l96:
							position, tokenIndex = position95, tokenIndex95
							if buffer[position] != rune('&') {
								goto l97
							}
							position++
							goto l95
						l97:
							position, tokenIndex = position95, tokenIndex95
							if buffer[position] != rune(',') {
								goto l98
							}
							position++
							goto l95
						l98:
							position, tokenIndex = position95, tokenIndex95
							if buffer[position] != rune('.') {
								goto l99
							}
							position++
							goto l95
						l99:
							position, tokenIndex = position95, tokenIndex95
							if buffer[position] != rune(':') {
								goto l100
							}
							position++
							goto l95
						l100:
							position, tokenIndex = position95, tokenIndex95
							if buffer[position] != rune('(') {
								goto l101
							}
							position++
							goto l95
						l101:
							position, tokenIndex = position95, tokenIndex95
							if buffer[position] != rune(')') {
								goto l94
							}
							position++
						}
					l95:
						goto l85
					l94:
						position, tokenIndex = position94, tokenIndex94
					}
					if !matchDot() {
						goto l85
					}
					goto l84
				l85:
					position, tokenIndex = position85, tokenIndex85
				}
				add(ruleAggregationOption, position83)
			}
			return true
		l82:
			position, tokenIndex = position82, tokenIndex82
			return false
		},
		/* 14 SelectCount <- <('c' 'o' 'u' 'n' 't' '(' ')')> */
		func() bool {
			position102, tokenIndex102 := position, tokenIndex
			{
				position103 := position
				if buffer[position] != rune('c') {
					goto l102
				}
				position++
				if buffer[position] != rune('o') {
					goto l102
				}
				position++
				if buffer[position] != rune('u') {
					goto l102
				}
				position++
				if buffer[position] != rune('n') {
					goto l102
				}
				position++
				if buffer[position] != rune('t') {
					goto l102
				}
				position++
				if buffer[position] != rune('(') {
					goto l102
				}
				position++
				if buffer[position] != rune(')') {
					goto l102
				}
				position++
				add(ruleSelectCount, position103)
			}
			return true
		l102:
			position, tokenIndex = position102, tokenIndex102
			return false
		},
		/* 15 Renamed <- <ColumnName> */
		func() bool {
			position104, tokenIndex104 := position, tokenIndex
			{
				position105 := position
				if !_rules[ruleColumnName]() {
					goto l104
				}
				add(ruleRenamed, position105)
			}
			return true
		l104:
			position, tokenIndex = position104, tokenIndex104
			return false
		},
		/* 16 Cast <- <(!('=' / '&' / ',' / '.' / ':') .)+> */
		func() bool {
			position106, tokenIndex106 := position, tokenIndex
			{
				position107 := position
				{
					position110, tokenIndex110 := position, tokenIndex
					{
						position111, tokenIndex111 := position, tokenIndex
						if buffer[position] != rune('=') {
							goto l112
						}
						position++
						goto l111
					l112:
						position, tokenIndex = position111, tokenIndex111
						if buffer[position] != rune('&') {
							goto l113
						}
						position++
						goto l111
					l113:
						position, tokenIndex = position111, tokenIndex111
						if buffer[position] != rune(',') {
							goto l114
						}
						position++
						goto l111
					l114:
						position, tokenIndex = position111, tokenIndex111
						if buffer[position] != rune('.') {
							goto l115
						}
						position++
						goto l111
					l115:
						position, tokenIndex = position111, tokenIndex111
						if buffer[position] != rune(':') {
							goto l110
						}
						position++
					}
				l111:
					goto l106
				l110:
					position, tokenIndex = position110, tokenIndex110
				}
				if !matchDot() {
					goto l106
				}
			l108:
				{
					position109, tokenIndex109 := position, tokenIndex
					{
						position116, tokenIndex116 := position, tokenIndex
						{
							position117, tokenIndex117 := position, tokenIndex
							if buffer[position] != rune('=') {
								goto l118
							}
							position++
							goto l117
						l118:
							position, tokenIndex = position117, tokenIndex117
							if buffer[position] != rune('&') {
								goto l119
							}
							position++
							goto l117
						l119:
							position, tokenIndex = position117, tokenIndex117
							if buffer[position] != rune(',') {
								goto l120
							}
							position++
							goto l117
						l120:
							position, tokenIndex = position117, tokenIndex117
							if buffer[position] != rune('.') {
								goto l121
							}
							position++
							goto l117
						l121:
							position, tokenIndex = position117, tokenIndex117
							if buffer[position] != rune(':') {
								goto l116
							}
							position++
						}
					l117:
						goto l109
					l116:
						position, tokenIndex = position116, tokenIndex116
					}
					if !matchDot() {
						goto l109
					}
					goto l108
				l109:
					position, tokenIndex = position109, tokenIndex109
				}
				add(ruleCast, position107)
			}
			return true
		l106:
			position, tokenIndex = position106, tokenIndex106
			return false
		},
		/* 17 Limit <- <('l' 'i' 'm' 'i' 't' '=' Integer)> */
		func() bool {
			position122, tokenIndex122 := position, tokenIndex
			{
				position123 := position
				if buffer[position] != rune('l') {
					goto l122
				}
				position++
				if buffer[position] != rune('i') {
					goto l122
				}
				position++
				if buffer[position] != rune('m') {
					goto l122
				}
				position++
				if buffer[position] != rune('i') {
					goto l122
				}
				position++
				if buffer[position] != rune('t') {
					goto l122
				}
				position++
				if buffer[position] != rune('=') {
					goto l122
				}
				position++
				if !_rules[ruleInteger]() {
					goto l122
				}
				add(ruleLimit, position123)
			}
			return true
		l122:
			position, tokenIndex = position122, tokenIndex122
			return false
		},
		/* 18 Offset <- <('o' 'f' 'f' 's' 'e' 't' '=' Integer)> */
		func() bool {
			position124, tokenIndex124 := position, tokenIndex
			{
				position125 := position
				if buffer[position] != rune('o') {
					goto l124
				}
				position++
				if buffer[position] != rune('f') {
					goto l124
				}
				position++
				if buffer[position] != rune('f') {
					goto l124
				}
				position++
				if buffer[position] != rune('s') {
					goto l124
				}
				position++
				if buffer[position] != rune('e') {
					goto l124
				}
				position++
				if buffer[position] != rune('t') {
					goto l124
				}
				position++
				if buffer[position] != rune('=') {
					goto l124
				}
				position++
				if !_rules[ruleInteger]() {
					goto l124
				}
				add(ruleOffset, position125)
			}
			return true
		l124:
			position, tokenIndex = position124, tokenIndex124
			return false
		},
		/* 19 Order <- <('o' 'r' 'd' 'e' 'r' '=' OrderOptions)> */
		func() bool {
			position126, tokenIndex126 := position, tokenIndex
			{
				position127 := position
				if buffer[position] != rune('o') {
					goto l126
				}
				position++
